--- a/stylesheets/persia.css
+++ b/stylesheets/persia.css
@@ -235,7 +235,7 @@ footer {
     bottom: 0;
     right: 0;
     color: #fff;
-    background: linear-gradient(#90c541, #388c73);
+    background: transparent;
     padding: 0.25rem;
     box-shadow: 0 0 0 1px rgba(0, 0, 0, 0.05), 0 2px 3px 0 rgba(0, 0, 0, 0.1);
 }
