--- a/stylesheets/persia.css
+++ b/stylesheets/persia.css
@@ -7,9 +7,6 @@ html {
   line-height: 1.15;
   -webkit-text-size-adjust: 100%;
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
-  background: linear-gradient(to bottom right, #64a95a, #388c73) no-repeat
-    center center fixed;
-  background-size: cover;
   height: 100%;
 }
 
@@ -35,7 +32,11 @@ body {
   color: #fff;
   text-align: left;
   height: 100%;
-  background-color: transparent;
+  background: linear-gradient(to bottom right, #64a95a, #388c73) no-repeat
+    center center fixed;
+  background-color: #539c65;
+  background-size: cover;
+  margin-bottom: 1rem;
 }
 
 [tabindex="-1"]:focus {
@@ -94,7 +95,7 @@ p {
 }
 
 a {
-  color: #002bff;
+  color: #009dff;
   text-decoration: underline;
   background-color: transparent;
   outline: none;
@@ -148,7 +149,7 @@ section {
     padding: 0.25rem 0.5rem;
     font-size: 3rem;
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
-    background: rgba(0,0,0,.3);
+    background-color: rgba(0,0,0,0.5);
 }
 
 .input {
@@ -161,7 +162,9 @@ section {
 
 .nav-list  {
     margin: 1rem;
-    padding: 0;
+    padding: 1rem;
+    box-shadow: inset 0 4px 8px 0 rgba(0,0,0,0.2);
+    background-color: rgba(0,0,0,0.5);
 }
 
 .fuzzynav {
@@ -187,23 +190,31 @@ section {
      font-style: italic; 
 }
 
+.block,
 .fuzzynav div.results {
     margin: 1rem;
-    padding-bottom: 2rem;
+    padding: 1rem;
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+    background-color: rgba(0,0,0,0.5);
+}
+span.clear {
+  clear: both;
+  display: block;
 }
 
 .nav-list a,
 .fuzzynav div.results .hyperlink {
     color: #009dff;
-    background-color: rgba(34, 34, 34, 0.616);
+    background-color: #539c65;
     display: block;
-    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
     padding: 0.5rem;
     width: 100%;
     margin: 0.5rem auto;
     font-size: 1.4rem;
     transition: 300ms cubic-bezier(0.075, 0.82, 0.165, 1);
     text-decoration: none;
+    background:  linear-gradient(to bottom right, #64a95a, #388c73) no-repeat
+    center center fixed;
 }
 
 .nav-list a:hover,
@@ -222,21 +233,22 @@ section {
 }
 
 .fuzzynav div.results .hyperlink .link {
+    color: #0000FE;
     text-align: right;
     font-size: 1.1rem;
 }
 
 .fuzzynav div.results .hyperlink .highlight {
-    color: rgb(175, 175, 175)
+    text-decoration: underline;
 }
 
 footer {
-    position: fixed;
+    color: #fff;
+    background: rgb(0,0,0);
+    padding: 0.25rem;
     bottom: 0;
     right: 0;
-    color: #fff;
-    background: transparent;
-    padding: 0.25rem;
+    position: fixed;
     box-shadow: 0 0 0 1px rgba(0, 0, 0, 0.05), 0 2px 3px 0 rgba(0, 0, 0, 0.1);
 }
 
