--- a/styles/global.css
+++ b/styles/global.css
@@ -1,9 +1,38 @@
 @font-face {
     font-family: 'Cantarell';
-    src: url('/assets/fonts/Cantarell-Regular.otf');
+    src: url('/assets/fonts/Cantarell-Regular.otf') format('opentype');
     font-weight: normal;
     font-style: normal;
 }
+
+@font-face {
+    font-family: 'Cantarell';
+    src: url('/assets/fonts/Cantarell-Thin.otf') format('opentype');
+    font-weight: 100;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'Cantarell';
+    src: url('/assets/fonts/Cantarell-Light.otf') format('opentype');
+    font-weight: 300;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'Cantarell';
+    src: url('/assets/fonts/Cantarell-Bold.otf') format('opentype');
+    font-weight: bold;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'Cantarell';
+    src: url('/assets/fonts/Cantarell-ExtraBold.otf') format('opentype');
+    font-weight: 800;
+    font-style: normal;
+}
+
 
 * {
     box-sizing: border-box;
