Add posts and old grade-calc Fix small bugs >bad commit

--- a/styles/global.css
+++ b/styles/global.css
@@ -150,9 +150,32 @@ section {
 }
 
 .block {
-    margin: 2rem;
+    margin: 0 2rem;
     padding: 2rem;
     /* box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2); */
     border: 1px solid #ffffff;
-    border-radius: 1rem;
+    border-bottom: none;
+}
+
+.block:first-of-type {
+    border-top-right-radius: 1rem;
+    border-top-left-radius: 1rem;
+    margin-top: 2rem;
+}
+
+.block:last-of-type {
+    border-bottom: 1px solid #ffffff;
+    border-bottom-right-radius: 1rem;
+    border-bottom-left-radius: 1rem;
+    margin-bottom: 2rem;
+}
+
+code {
+    overflow-x: scroll;
+    max-width: 100%;
+    display: inline-block;
+    background-color: rgba(255, 255, 255, 0.1);
+    font-size: 1rem;
+    padding: 0.1rem 0.5rem;
+    vertical-align: bottom;
 }
