--- a/styles/global.css
+++ b/styles/global.css
@@ -1,3 +1,7 @@
+:root {
+    --main-border-color: #555555;
+}
+
 @font-face {
     font-family: 'Cantarell';
     src: url('/assets/fonts/Cantarell-Regular.otf') format('opentype');
@@ -149,11 +153,17 @@ section {
     z-index: -1;
 }
 
-.block {
+.container {
     max-width: 1018px;
     margin: 0 auto;
-    padding: 2rem;
-    border: 1px solid #ffffff;
+    position: relative;
+}
+
+.block {
+    padding: 1.5rem;
+    max-width: 100%;
+    margin: 0 0.25rem;
+    border: 1px solid var(--main-border-color);
     border-bottom: none;
 }
 
@@ -164,10 +174,28 @@ section {
 }
 
 .block:last-of-type {
-    border-bottom: 1px solid #ffffff;
+    border-bottom: 1px solid var(--main-border-color);
     border-bottom-right-radius: 1rem;
     border-bottom-left-radius: 1rem;
     margin-bottom: 2rem;
+}
+
+.block .block {
+    margin: 0 ;
+    border-radius: 0;
+    border-right: none;
+    border-bottom: none;
+    border-top: 1px dashed var(--main-border-color);
+    border-left: 1px dashed var(--main-border-color);
+}
+
+.block .block:first-of-type {
+    border-top: none;
+}
+
+.block .block:last-of-type {
+    border-bottom-left-radius: 1rem;
+    border-bottom:  1px dashed var(--main-border-color);
 }
 
 code {
@@ -178,4 +206,37 @@ code {
     font-size: 1rem;
     padding: 0.1rem 0.5rem;
     vertical-align: bottom;
+}
+
+.button {
+    padding: 0.2rem 1rem;
+    margin: 0.3rem 0.3rem;
+    background:#1a3a15;
+    color: rgba(255, 255, 255);
+    display: inline-block;
+    text-decoration: none;
+    transition: 100ms ease-in-out all;
+    border: 1px solid #ffffff;
+    border-radius: 0.5rem;
+}
+
+.button:hover {
+    text-decoration: none;
+    background:#099945;
+    border-color: #099945;
+}
+
+.button:active {
+    text-decoration: none;
+    box-shadow: none;
+    transform: translate(1px, 1px);
+}
+
+.button.blue {
+    background: #05455f;
+}
+
+.button.blue:hover {
+    background:rgb(10, 130, 177);
+    border-color: rgb(10, 130, 177);
 }
