--- a/styles/quick-links.module.css
+++ b/styles/quick-links.module.css
@@ -1,12 +1,17 @@
 .button::after {
     content: ' \2192';
-    margin-left: 0.5rem;
+    display: inline-block;
+    transition: 100ms ease-in-out all;
+    margin-left: 0.3rem;
+}
+
+.button:hover {
     display: inline-block;
     transition: 100ms ease-in-out all;
 }
 
 .button:hover::after {
-    transform: translateX(0.2rem) scale(1.1);
+    transform: translateX(0.2rem) scale(1.3);
 }
 
 .blueButton:hover::after {
