--- a/styles/global.css
+++ b/styles/global.css
@@ -231,6 +231,50 @@ code {
 
 .button.blue:active {
     background:#05232f;
+    box-shadow: none;
 }
 
+.text.center {
+    text-align: center;
+}
+
+.no-display {
+    display: none;
+}
+
+.button.link::after {
+    content: ' \2192';
+    display: inline-block;
+    transition: 100ms ease-in-out all;
+    margin-left: 0.3rem;
+}
+
+.button.link:hover {
+    display: inline-block;
+    transition: 100ms ease-in-out all;
+}
+
+.button.link:hover::after {
+    transform: translateX(0.2rem) scale(1.3);
+}
+
+.button.link.extern:hover::after {
+    transform: rotateZ(-45deg) scale(1.5);
+}
+
+.button.link.back::before {
+    content: ' \2190';
+    display: inline-block;
+    transition: 100ms ease-in-out all;
+    margin-right: 0.3rem;
+}
+
+.button.link:hover::before {
+    transform: translateX(-0.2rem) scale(1.3);
+}
+
+.button.link.back::after {
+    content: '';
+    display: none;
+}
 
