--- a/styles/lists.module.css
+++ b/styles/lists.module.css
@@ -20,7 +20,8 @@
 }
 
 .block .block {
-    margin: 0 ;
+    margin: 0;
+    margin-left: 0.5rem;
     border-radius: 0;
     border-right: none;
     border-bottom: none;
