--- a/styles/post.module.css
+++ b/styles/post.module.css
@@ -3,6 +3,8 @@
     z-index: -1;
     right: 0;
     left: 0;
+    top: 0;
+    bottom: 0;
     background-size: cover;
     background-position: center;
     min-height: 100%;
