--- a/styles/global.css
+++ b/styles/global.css
@@ -12,46 +12,66 @@
 
 @font-face {
     font-family: 'Cantarell';
-    src: url('/assets/fonts/Cantarell-Regular.otf') format('opentype');
+    src: url('/assets/fonts/Cantarell/Cantarell-Regular.otf') format('opentype');
     font-weight: normal;
     font-style: normal;
 }
 
 @font-face {
     font-family: 'Cantarell';
-    src: url('/assets/fonts/Cantarell-Thin.otf') format('opentype');
+    src: url('/assets/fonts/Cantarell/Cantarell-Thin.otf') format('opentype');
     font-weight: 100;
     font-style: normal;
 }
 
 @font-face {
     font-family: 'Cantarell';
-    src: url('/assets/fonts/Cantarell-Light.otf') format('opentype');
+    src: url('/assets/fonts/Cantarell/Cantarell-Light.otf') format('opentype');
     font-weight: 300;
     font-style: normal;
 }
 
 @font-face {
     font-family: 'Cantarell';
-    src: url('/assets/fonts/Cantarell-Bold.otf') format('opentype');
+    src: url('/assets/fonts/Cantarell/Cantarell-Bold.otf') format('opentype');
     font-weight: bold;
     font-style: normal;
 }
 
 @font-face {
     font-family: 'Cantarell';
-    src: url('/assets/fonts/Cantarell-ExtraBold.otf') format('opentype');
+    src: url('/assets/fonts/Cantarell/Cantarell-ExtraBold.otf') format('opentype');
     font-weight: 800;
     font-style: normal;
 }
 
+@font-face {
+    font-family: 'EB Garamond';
+    src: url('/assets/fonts/EB_Garamond/static/EBGaramond-Regular.ttf') format('truetype');
+    font-weight: normal;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'EB Garamond';
+    src: url('/assets/fonts/EB_Garamond/static/EBGaramond-Bold.ttf') format('truetype');
+    font-weight: bold;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'EB Garamond';
+    src: url('/assets/fonts/EB_Garamond/static/EBGaramond-ExtraBold.ttf') format('truetype');
+    font-weight: 800;
+    font-style: normal;
+}
 
 * {
     box-sizing: border-box;
 }
 
 body {
-    font-family: 'Cantarell', 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    font-family: 'Cantarell', 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', 'Helvetica Neue', 'Helvetica', Arial, sans-serif;
 }
 
 article,
@@ -161,7 +181,6 @@ pre {
 table {
     display: flex;
     flex-direction: column;
-    border-radius: 1rem;
     margin: 1rem 0;
     overflow: hidden;
 }
@@ -169,7 +188,6 @@ table {
 table thead {
     background: var(--secondary-green);
     z-index: -1;
-    border-bottom: 1px solid #999999;
 }
 
 table thead tr,
@@ -185,12 +203,7 @@ table thead tr th,
 table tbody tr td {
     display: flex;
     flex: 1;
-    padding: .5em;
-}
-
-table th+th,
-table td+td {
-    border-left: 1px solid #999999;
+    padding: .25rem 0.75rem;
 }
 
 .lambda-logo {
