--- a/styles/global.css
+++ b/styles/global.css
@@ -116,7 +116,7 @@ section {
 }
 
 body {
-    margin: 0 0 1rem;
+    margin: 0 0 4rem;
     font-size: 18px;
     font-weight: 400;
     line-height: 1.5;
@@ -361,4 +361,8 @@ code {
 .button.link.back::after {
     content: '';
     display: none;
+}
+
+.monospace {
+    font-family: 'Hack', 'Source Code Pro', Consolas, monospace;
 }
