--- a/styles/post.module.css
+++ b/styles/post.module.css
@@ -5,21 +5,25 @@
     left: 0;
     top: 0;
     bottom: 0;
+    margin: 0;
+    padding: 0;
     background-size: cover;
-    background-position: top left;
+    background-repeat: no-repeat;
+    background-position: top center;
     min-height: 100%;
     background-attachment: fixed;
 }
 
 .block {
     font-family: 'EB Garamond', 'Garamond', 'Times New Roman', Times, serif;
-    background-color: rgba(13, 17, 23, 0.95);
+    background-color: rgba(13, 17, 23, 0.99);
     margin: 0 auto;
     border-radius: 0;
     font-size: 1.25rem;
     line-height: 2rem;
+    padding: 2rem 1rem;
 }
 
 .spacer {
-    height: 5rem;
+    height: 25rem;
 }
