--- a/styles/title.module.css
+++ b/styles/title.module.css
@@ -11,15 +11,20 @@
 }
 
 .nav {
-    white-space: pre-wrap;
     padding: 0.25rem 0.75rem;
     font-size: 1.5rem;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.4);
     position: fixed;
     bottom: 0;
     z-index: 1000;
-    left: 0;
-    right: 0;
     margin: 0;
+    height: 2.75rem;
+    max-height: 2.75rem;
+    min-height: 2.75rem;
+    min-width: 100%;
+    width: 100%;
     background: linear-gradient(to bottom right, #1a3a15, #09351b) no-repeat center center fixed;
+    overflow-y: hidden;
+    overflow-x: auto;
+    white-space: nowrap;
 }
