--- a/styles/global.css
+++ b/styles/global.css
@@ -79,7 +79,7 @@
 @font-face {
     font-family: 'Hack';
     src: url('/assets/fonts/Hack/hack-regular-subset.woff2') format('woff2'), url('/assets/fonts/Hack/hack-regular-subset.woff') format('woff');
-    font-weight: 400;
+    font-weight: normal;
     font-style: normal;
     font-display: swap;
 }
@@ -87,7 +87,7 @@
 @font-face {
     font-family: 'Hack';
     src: url('/assets/fonts/Hack/hack-bold-subset.woff2') format('woff2'), url('/assets/fonts/Hack/hack-bold-subset.woff') format('woff');
-    font-weight: 700;
+    font-weight: bold;
     font-style: normal;
     font-display: swap;
 }
@@ -95,7 +95,7 @@
 @font-face {
     font-family: 'Hack';
     src: url('/assets/fonts/Hack/hack-italic-subset.woff2') format('woff2'), url('/assets/fonts/Hack/hack-italic-webfont.woff') format('woff');
-    font-weight: 400;
+    font-weight: normal;
     font-style: italic;
     font-display: swap;
 }
@@ -103,7 +103,7 @@
 @font-face {
     font-family: 'Hack';
     src: url('/assets/fonts/Hack/hack-bolditalic-subset.woff2') format('woff2'), url('/assets/fonts/Hack/hack-bolditalic-subset.woff') format('woff');
-    font-weight: 700;
+    font-weight: bold;
     font-style: italic;
     font-display: swap;
 }
