--- a/styles/global.css
+++ b/styles/global.css
@@ -235,9 +235,8 @@ code {
 }
 
 table {
-    display: flex;
-    flex-direction: column;
-    margin: 1rem 0;
+    margin: 1rem auto;
+	width:100%;
     overflow: hidden;
     border-radius: 0.5rem;
 }
@@ -258,11 +257,6 @@ table tr:last-of-type
     border-bottom-right-radius: 0.5rem;
 }
 
-table thead tr,
-table tbody tr {
-    display: flex;
-}
-
 table tbody tr:nth-of-type(2n) {
     background-color: var(--table-even-color);
 }
@@ -273,12 +267,10 @@ table tbody tr:nth-of-type(2n+1) {
 
 table thead tr th,
 table tbody tr td {
-    display: flex;
-    flex: 1;
     padding: .25rem 0.75rem;
 }
 
-li {
+ul li {
     list-style-type: square;
 }
 
