--- a/styles/post.module.css
+++ b/styles/post.module.css
@@ -31,3 +31,11 @@
 .background.spacer {
     height: 25rem;
 }
+
+.time {
+    text-align: center;
+    display: block;
+    font-style: italic;
+    font-size: 1rem;
+    margin: 0.5rem 0.75rem;
+}
